--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-   "name": "server",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "ts-node": "3.3.0",
-      "@types/node": "^8.0.29",
-      "typescript": "2.5.2"
-   },
-   "dependencies": {
-      "typeorm": "0.2.7",
-      "reflect-metadata": "^0.1.10",
-      "pg": "^7.3.0"
-   },
-   "scripts": {
-      "start": "ts-node src/index.ts"
-   }
+  "name": "server",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "dependencies": {
+    "graphql-yoga": "^1.14.12",
+    "pg": "^7.4.3",
+    "reflect-metadata": "^0.1.12",
+    "typeorm": "0.2.7"
+  },
+  "devDependencies": {
+    "@types/node": "^10.5.4",
+    "nodemon": "^1.18.3",
+    "ts-node": "7.0.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "typescript": "2.9.2"
+  },
+  "scripts": {
+    "start": "nodemon --exec ts-node src/index.ts"
+  }
 }
