--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "dependencies": {
+    "graphql-import": "^0.6.0",
     "graphql-yoga": "^1.14.12",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
-    "typeorm": "0.2.7"
+    "typeorm": "0.2.7",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^10.5.4",
+    "@types/uuid": "^3.4.3",
+    "gql2ts": "^1.8.1",
     "nodemon": "^1.18.3",
     "ts-node": "7.0.0",
     "tslint": "^5.11.0",
@@ -17,6 +21,7 @@
     "typescript": "2.9.2"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
   }
 }
